# fanchart

./: .gitignore  .readthedocs.yaml  Fanchart_v1_Demo.ipynb  README.md  examples.py  plot.py  pyproject.toml  requirements.txt  setup.py
data/: fan_history.csv  fan_parameters.csv
docs/: requirements.txt
docs/source/: conf.py  index.rst  quick_start.rst
docs/source/notebooks/: Fanchart_v1_Demo.ipynb
fanchart/: __init__.py  _version.py  plot.py
fanchart/data/: examples.py  fan_history_2022Q1.csv  fan_history_2022Q3.csv  fan_parameters_2022Q1.csv  fan_parameters_2022Q3.csv
tests/: test_charts.py  test_data_load.py
