[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fanchart"
version = "1.0.3"
authors = [{ name = "Dialid Santiago", email = "d.santiago@outlook.com" }, ]
description = "Library to create Fan Charts as introduced by the Bank of England in 1996."
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = ["pandas>=1.5.3",
                "numpy>=1.23.5",
                "scipy>=1.9.3",
                "matplotlib>=3.6.2",
                "parameterized>=0.8.1",
                "twopiece>=1.3.1",
                "seaborn>=0.8"
                ]

[options.package_data]
example = ["data/*.csv"]

classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"]

[project.urls]
"Homepage" = "https://github.com/quantgirluk/fanchart"
"Bug Tracker" = "https://github.com/quantgirluk/fanchart/issues"
