[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["fanchart/data/*.csv",
    "fanchart/*.py",
    "README.md"]

[project]
name = "fanchart"
version = "1.1.0"
authors = [{name = "Dialid Santiago", email = "d.santiago@outlook.com" }]
description = "Library to create Fan Charts as introduced by the Bank of England in 1996."
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = ["pandas>=1.5.3",
                "numpy<1.24.0",
                "matplotlib>=3.6.2",
                "twopiece>=1.3.1",
                ]

classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"]

[project.urls]
"Homepage" = "https://github.com/quantgirluk/fanchart"
"Bug Tracker" = "https://github.com/quantgirluk/fanchart/issues"
